[package]
name = "unidown"
version = "0.9.7"
edition = "2024"
description = "Convert Markdown to Unicode"
repository = "https://github.com/qtfkwk/unidown"
license = "MIT"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap-cargo = "0.18.3"
pager2 = "0.6.5"
pulldown-cmark = "0.13.3"
pulldown-cmark-escape = "0.11.0"
veg = "0.6.5"
